--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,16 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Catálogo de Puertas y Portones</title>
   <link rel="stylesheet" href="styles.css">
-  <script src="script.js" defer></script>
 </head>
 <body>
 
+  <!-- Encabezado de la página -->
   <header>
     <div class="container">
       <h1><a href="index.html">Taller de Puertas</a></h1>
       <nav>
         <ul>
-          <li><a href="/">Inicio</a></li>
+          <li><a href="index.html">Inicio</a></li>
           <li><a href="catalogo.html">Catálogo</a></li>
           <li><a href="carrito.html">Carrito</a></li>
           <li><a href="login.html">Iniciar Sesión</a></li>
@@ -23,6 +23,7 @@
     </div>
   </header>
 
+  <!-- Catálogo de Productos -->
   <section id="catalogo" class="container">
     <h2>Productos Disponibles</h2>
     <div class="productos">
@@ -39,29 +40,12 @@
         <p>Precio: $300</p>
         <button class="agregar-carrito">Agregar al Carrito</button>
       </div>
-  
+      <!-- Aquí puedes agregar más productos -->
     </div>
   </section>
-  
-
+      <!-- Aquí puedes agregar más productos -->
     </div>
   </section>
-
-  <section id="carrito" class="container">
-    <h2>Carrito de Compras</h2>
-    <ul>
-      <li>Puerta Automática de Madera - $500 <button>Eliminar</button></li>
-      <li>Portón Manual de Metal - $300 <button>Eliminar</button></li>
-    </ul>
-    <p>Total: $800</p>
-    <button>Proceder al Pago</button>
-  </section>
-
-  <footer>
-    <div class="container">
-      <p>&copy; 2024 Taller de Puertas. Todos los derechos reservados.</p>
-    </div>
-  </footer>
 
 </body>
 </html>
