--- a/HTML/inventario.html
+++ b/HTML/inventario.html
@@ -1,75 +1,84 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gestión de Inventario</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Gestión de Inventario</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <!-- Encabezado -->
+    <header>
+      <div class="container">
+        <h1><a href="/">Taller de Puertas</a></h1>
+        <nav>
+          <ul>
+            <li><a href="index.com">Inicio</a></li>
+            <li><a href="catalogo.html">Catálogo</a></li>
+            <li><a href="inventario.html">Inventario</a></li>
+            <li><a href="login.html">Iniciar Sesión</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
 
-  <header>
-    <div class="container">
-      <h1><a href="/">Taller de Puertas</a></h1>
-      <nav>
-        <ul>
-          <li><a href="/">Inicio</a></li>
-          <li><a href="/catalogo">Catálogo</a></li>
-          <li><a href="/inventario">Inventario</a></li>
-          <li><a href="/login">Iniciar Sesión</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
+    <!-- Sección de Inventario -->
+    <section id="inventario" class="container">
+      <h2>Gestión de Inventario</h2>
 
-  <section id="inventario" class="container">
-    <h2>Gestión de Inventario</h2>
-    
-    <button id="agregar-producto" class="btn-agregar">Agregar Producto</button>
+      <!-- Botón para agregar producto -->
+      <button id="agregar-producto" class="btn-agregar">
+        Agregar Producto
+      </button>
 
-    <table>
-      <thead>
-        <tr>
-          <th>ID</th>
-          <th>Nombre del Producto</th>
-          <th>Precio</th>
-          <th>Stock</th>
-          <th>Acciones</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>1</td>
-          <td>Puerta Automática de Madera</td>
-          <td>$500</td>
-          <td>20</td>
-          <td>
-            <button class="btn-editar">Editar</button>
-            <button class="btn-eliminar">Eliminar</button>
-          </td>
-        </tr>
-        <tr>
-          <td>2</td>
-          <td>Portón Manual de Metal</td>
-          <td>$300</td>
-          <td>10</td>
-          <td>
-            <button class="btn-editar">Editar</button>
-            <button class="btn-eliminar">Eliminar</button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </section>
+      <!-- Tabla de productos -->
+      <table>
+        <thead>
+          <tr>
+            <th>ID</th>
+            <th>Nombre del Producto</th>
+            <th>Precio</th>
+            <th>Stock</th>
+            <th>Acciones</th>
+          </tr>
+        </thead>
+        <tbody>
+          <!-- Ejemplo de producto -->
+          <tr>
+            <td>1</td>
+            <td>Puerta Automática de Madera</td>
+            <td>$500</td>
+            <td>20</td>
+            <td>
+              <button class="btn-editar">Editar</button>
+              <button class="btn-eliminar">Eliminar</button>
+            </td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>Portón Manual de Metal</td>
+            <td>$300</td>
+            <td>10</td>
+            <td>
+              <button class="btn-editar">Editar</button>
+              <button class="btn-eliminar">Eliminar</button>
+            </td>
+          </tr>
+          <!-- Agrega más productos según sea necesario -->
+        </tbody>
+      </table>
+    </section>
 
-  <footer>
-    <div class="container">
-      <p>&copy; 2024 Taller de Puertas. Todos los derechos reservados.</p>
-    </div>
-  </footer>
+    <!-- Pie de página -->
+    <footer>
+      <div class="container">
+        <p>&copy; 2024 Taller de Puertas. Todos los derechos reservados.</p>
+      </div>
+    </footer>
 
-  <script>
-  </script>
-
-</body>
+    <!-- JavaScript (Opcional, para funcionalidades futuras) -->
+    <script>
+      // Aquí puedes agregar lógica para manejar el agregar, editar y eliminar productos.
+    </script>
+  </body>
 </html>
