--- a/HTML/catalogo.html
+++ b/HTML/catalogo.html
@@ -1,85 +1,75 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Catálogo de Puertas y Portones</title>
-  <link rel="stylesheet" href="styles.css">
-  <script src="script.js" defer></script>
-</head>
-<body>
-
-  <header>
-    <div class="container">
-      <h1><a href="/">Taller de Puertas</a></h1>
-      <nav>
-        <ul>
-          <li><a href="/">Inicio</a></li>
-          <li><a href="/catalogo">Catálogo</a></li>
-          <li><a href="#carrito">Carrito</a></li>
-          <li><a href="#login">Iniciar Sesión</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
-
-  <section id="filtros" class="container">
-    <h2>Filtrar Productos</h2>
-    <form action="#" method="GET">
-      <label for="tipo">Tipo de puerta:</label>
-      <select id="tipo" name="tipo">
-        <option value="automatica">Automática</option>
-        <option value="manual">Manual</option>
-      </select>
-
-      <label for="material">Material:</label>
-      <select id="material" name="material">
-        <option value="madera">Madera</option>
-        <option value="metal">Metal</option>
-      </select>
-
-      <label for="color">Color:</label>
-      <input type="text" id="color" name="color" placeholder="Ej. Blanco, Negro, etc.">
-
-      <button type="submit">Filtrar</button>
-    </form>
-  </section>
-
-  <section id="catalogo" class="container">
-    <h2>Productos Disponibles</h2>
-    <div class="productos">
-      <div class="producto">
-        <img src="puerta1.jpg" alt="Puerta Automática" />
-        <p><strong>Puerta Automática de Madera</strong></p>
-        <p>Precio: $500</p>
-        <button class="agregar-carrito">Agregar al Carrito</button>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Catálogo de Puertas y Portones</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <header>
+      <div class="container">
+        <h1><a href="index.html">Taller de Puertas</a></h1>
+        <nav>
+          <ul>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="catalogo.html">Catálogo</a></li>
+            <li><a href="carrito.html">Carrito</a></li>
+            <li><a href="login.html">Iniciar Sesión</a></li>
+          </ul>
+        </nav>
       </div>
+    </header>
 
-      <div class="producto">
-        <img src="puerta2.jpg" alt="Portón Manual" />
-        <p><strong>Portón Manual de Metal</strong></p>
-        <p>Precio: $300</p>
-        <button class="agregar-carrito">Agregar al Carrito</button>
+    <section id="filtros" class="container">
+      <h2>Filtrar Productos</h2>
+      <form action="#" method="GET">
+        <label for="tipo">Tipo de puerta:</label>
+        <select id="tipo" name="tipo">
+          <option value="automatica">Automática</option>
+          <option value="manual">Manual</option>
+        </select>
+
+        <label for="material">Material:</label>
+        <select id="material" name="material">
+          <option value="madera">Madera</option>
+          <option value="metal">Metal</option>
+        </select>
+
+        <label for="color">Color:</label>
+        <input
+          type="text"
+          id="color"
+          name="color"
+          placeholder="Ej. Blanco, Negro, etc."
+        />
+
+        <button type="submit">Filtrar</button>
+      </form>
+    </section>
+
+    <section id="catalogo" class="container">
+      <h2>Productos Disponibles</h2>
+      <div class="productos">
+        <div class="producto">
+          <img src="puerta1.jpg" alt="Puerta Automática" />
+          <p><strong>Puerta Automática de Madera</strong></p>
+          <p>Precio: $500</p>
+          <button class="agregar-carrito">Agregar al Carrito</button>
+        </div>
+
+        <div class="producto">
+          <img src="puerta2.jpg" alt="Portón Manual" />
+          <p><strong>Portón Manual de Metal</strong></p>
+          <p>Precio: $300</p>
+          <button class="agregar-carrito">Agregar al Carrito</button>
+        </div>
       </div>
-
-    </div>
-  </section>
-
-  <section id="carrito" class="container">
-    <h2>Carrito de Compras</h2>
-    <ul>
-      <li>Puerta Automática de Madera - $500 <button>Eliminar</button></li>
-      <li>Portón Manual de Metal - $300 <button>Eliminar</button></li>
-    </ul>
-    <p>Total: $800</p>
-    <button>Proceder al Pago</button>
-  </section>
-
-  <footer>
-    <div class="container">
-      <p>&copy; 2024 Taller de Puertas. Todos los derechos reservados.</p>
-    </div>
-  </footer>
-
-</body>
+    </section>
+    <footer>
+      <div class="container">
+        <p>&copy; 2024 Taller de Puertas. Todos los derechos reservados.</p>
+      </div>
+    </footer>
+  </body>
 </html>
