--- a/HTML/index.html
+++ b/HTML/index.html
@@ -16,8 +16,10 @@
         <ul>
           <li><a href="index.html">Inicio</a></li>
           <li><a href="catalogo.html">Catálogo</a></li>
+          <li><a href="inventario.html">Inventario</a></li>
           <li><a href="carrito.html">Carrito</a></li>
           <li><a href="login.html">Iniciar Sesión</a></li>
+          <li><a href="facturacion.html">Facturación</a></li>
         </ul>
       </nav>
     </div>
@@ -40,12 +42,13 @@
         <p>Precio: $300</p>
         <button class="agregar-carrito">Agregar al Carrito</button>
       </div>
-      <!-- Aquí puedes agregar más productos -->
     </div>
   </section>
-      <!-- Aquí puedes agregar más productos -->
-    </div>
-  </section>
+
+  <!-- Pie de página -->
+  <footer>
+    <p>&copy; 2024 Taller de Puertas. Todos los derechos reservados.</p>
+  </footer>
 
 </body>
 </html>
