--- a/HTML/registro.html
+++ b/HTML/registro.html
@@ -7,20 +7,23 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <!-- Encabezado -->
-    <header>
-      <div class="container">
-        <h1><a href="/">Taller de Puertas</a></h1>
-        <nav>
-          <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="catalogo.html">Catálogo</a></li>
-            <li><a href="carrito.html">Carrito</a></li>
-            <li><a href="login.html">Iniciar Sesión</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
+   <!-- Encabezado de la página -->
+   <header>
+    <div class="container">
+      <h1><a href="index.html">Taller de Puertas</a></h1>
+      <nav>
+        <ul>
+          <li><a href="index.html">Inicio</a></li>
+          <li><a href="catalogo.html">Catálogo</a></li>
+          <li><a href="inventario.html">Inventario</a></li>
+          <li><a href="carrito.html">Carrito</a></li>
+          <li><a href="login.html">Iniciar Sesión</a></li>
+          <li><a href="facturacion.html">Facturación</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
 
     <!-- Formulario de registro -->
     <section id="registro" class="container">
