--- a/Taller_de_puertas-main/Taller_de_puertas-main/catalogo.html
+++ b/Taller_de_puertas-main/Taller_de_puertas-main/catalogo.html
@@ -3,77 +3,80 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Catálogo de Puertas y Portones</title>
+    <title>Catálogo</title>
+    <link
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body>
-     <!-- Encabezado de la página -->
-  <header>
-    <div class="container">
-      <h1><a href="index.html">Taller de Puertas</a></h1>
-      <nav>
-        <ul>
-          <li><a href="index.html">Inicio</a></li>
-          <li><a href="catalogo.html">Catálogo</a></li>
-          <li><a href="inventario.html">Inventario</a></li>
-          <li><a href="carrito.html">Carrito</a></li>
-          <li><a href="login.html">Iniciar Sesión</a></li>
-          <li><a href="facturacion.html">Facturación</a></li>
-        </ul>
-      </nav>
+  <body class="bg-light">
+    <!-- Header -->
+    <header class="bg-primary text-white">
+      <div
+        class="container d-flex justify-content-between align-items-center py-3"
+      >
+        <h1 class="mb-0">Taller de Puertas</h1>
+        <nav>
+          <ul class="nav">
+            <li class="nav-item">
+              <a class="nav-link text-white" href="index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="catalogo.html">Catálogo</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="carrito.html">Carrito</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="backend/logout.php"
+                >Cerrar Sesión</a
+              >
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+
+    <!-- Catálogo -->
+    <div class="container my-5">
+      <h2 class="text-center mb-4">Catálogo de Puertas</h2>
+      <div class="row mb-4">
+        <div class="col-md-5">
+          <select id="filter-categoria" class="form-control">
+            <option value="">Todas las Categorías</option>
+          </select>
+        </div>
+        <div class="col-md-5">
+          <select id="filter-tipo" class="form-control">
+            <option value="">Todos los Tipos</option>
+          </select>
+        </div>
+        <div class="col-md-2">
+          <button id="filter-btn" class="btn btn-primary btn-block">
+            Filtrar
+          </button>
+        </div>
+      </div>
+      <div id="product-list" class="row">
+        <!-- Productos cargados dinámicamente -->
+      </div>
+      <div
+        id="message"
+        class="alert alert-warning d-none text-center"
+        role="alert"
+      >
+        No se encontraron productos
+      </div>
     </div>
-  </header>
 
-
-    <section id="filtros" class="container">
-      <h2>Filtrar Productos</h2>
-      <form action="#" method="GET">
-        <label for="tipo">Tipo de puerta:</label>
-        <select id="tipo" name="tipo">
-          <option value="automatica">Automática</option>
-          <option value="manual">Manual</option>
-        </select>
-
-        <label for="material">Material:</label>
-        <select id="material" name="material">
-          <option value="madera">Madera</option>
-          <option value="metal">Metal</option>
-        </select>
-
-        <label for="color">Color:</label>
-        <input
-          type="text"
-          id="color"
-          name="color"
-          placeholder="Ej. Blanco, Negro, etc."
-        />
-
-        <button type="submit">Filtrar</button>
-      </form>
-    </section>
-
-    <section id="catalogo" class="container">
-      <h2>Productos Disponibles</h2>
-      <div class="productos">
-        <div class="producto">
-          <img src="puerta1.jpg" alt="Puerta Automática" />
-          <p><strong>Puerta Automática de Madera</strong></p>
-          <p>Precio: $500</p>
-          <button class="agregar-carrito">Agregar al Carrito</button>
-        </div>
-
-        <div class="producto">
-          <img src="puerta2.jpg" alt="Portón Manual" />
-          <p><strong>Portón Manual de Metal</strong></p>
-          <p>Precio: $300</p>
-          <button class="agregar-carrito">Agregar al Carrito</button>
-        </div>
-      </div>
-    </section>
-    <footer>
-      <div class="container">
-        <p>&copy; 2024 Taller de Puertas. Todos los derechos reservados.</p>
-      </div>
+    <!-- Footer -->
+    <footer class="bg-primary text-white text-center py-3">
+      <p class="mb-0">
+        &copy; 2024 Taller de Puertas. Todos los derechos reservados.
+      </p>
     </footer>
+
+    <script src="js/catalogo.js"></script>
   </body>
 </html>
