--- a/Taller_de_puertas-main/Taller_de_puertas-main/index.html
+++ b/Taller_de_puertas-main/Taller_de_puertas-main/index.html
@@ -1,54 +1,53 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Catálogo de Puertas y Portones</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-
-  <!-- Encabezado de la página -->
-  <header>
-    <div class="container">
-      <h1><a href="index.html">Taller de Puertas</a></h1>
-      <nav>
-        <ul>
-          <li><a href="index.html">Inicio</a></li>
-          <li><a href="catalogo.html">Catálogo</a></li>
-          <li><a href="inventario.html">Inventario</a></li>
-          <li><a href="carrito.html">Carrito</a></li>
-          <li><a href="login.html">Iniciar Sesión</a></li>
-          <li><a href="facturacion.html">Facturación</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
-
-  <!-- Catálogo de Productos -->
-  <section id="catalogo" class="container">
-    <h2>Productos Disponibles</h2>
-    <div class="productos">
-      <div class="producto">
-        <img src="puerta1.jpg" alt="Puerta Automática" />
-        <p><strong>Puerta Automática de Madera</strong></p>
-        <p>Precio: $500</p>
-        <button class="agregar-carrito">Agregar al Carrito</button>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Inicio | Taller de Puertas</title>
+    <link
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body class="bg-light">
+    <header class="bg-primary text-white">
+      <div
+        class="container d-flex justify-content-between align-items-center py-3"
+      >
+        <h1 class="mb-0">Taller de Puertas</h1>
+        <nav>
+          <ul class="nav">
+            <li class="nav-item">
+              <a class="nav-link text-white" href="index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="catalogo.html">Catálogo</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="carrito.html">Carrito</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="backend/logout.php"
+                >Cerrar Sesión</a
+              >
+            </li>
+          </ul>
+        </nav>
       </div>
-  
-      <div class="producto">
-        <img src="puerta2.jpg" alt="Portón Manual" />
-        <p><strong>Portón Manual de Metal</strong></p>
-        <p>Precio: $300</p>
-        <button class="agregar-carrito">Agregar al Carrito</button>
-      </div>
+    </header>
+    <!-- Lista de Productos -->
+    <div class="container my-5">
+      <h2 class="text-center mb-4">Nuestros Productos</h2>
+      <div id="product-list" class="row"></div>
     </div>
-  </section>
 
-  <!-- Pie de página -->
-  <footer>
-    <p>&copy; 2024 Taller de Puertas. Todos los derechos reservados.</p>
-  </footer>
+    <footer class="bg-primary text-white text-center py-3">
+      <p class="mb-0">
+        &copy; 2024 Taller de Puertas. Todos los derechos reservados.
+      </p>
+    </footer>
 
-</body>
+    <script src="js/index.js"></script>
+  </body>
 </html>
