--- a/Taller_de_puertas-main/Taller_de_puertas-main/registro.html
+++ b/Taller_de_puertas-main/Taller_de_puertas-main/registro.html
@@ -3,62 +3,95 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Registrarse</title>
+    <title>Registro</title>
+    <link
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles.css" />
-    <script src="js/register.js" defer></script> 
   </head>
-  <body>
-    <!-- Encabezado -->
-    <header>
-      <div class="container">
-        <h1><a href="index.html">Taller de Puertas</a></h1>
-        <nav>
-          <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="catalogo.html">Catálogo</a></li>
-            <li><a href="inventario.html">Inventario</a></li>
-            <li><a href="carrito.html">Carrito</a></li>
-            <li><a href="login.html">Iniciar Sesión</a></li>
-          </ul>
-        </nav>
-      </div>
+  <body class="bg-light">
+    <header class="bg-primary text-white text-center py-3">
+      <h1 class="mb-0">Taller de Puertas</h1>
     </header>
+    <div
+      class="container d-flex justify-content-center align-items-center vh-100"
+    >
+      <div class="card shadow-sm" style="width: 22rem">
+        <div class="card-body">
+          <h5 class="card-title text-center">Crea tu Cuenta</h5>
+          <div id="message" class="alert d-none" role="alert"></div>
 
-    <!-- Formulario de Registro -->
-    <section id="registro" class="container">
-      <h2>Registrarse</h2>
-      <form id="register-form" method="POST">
-        <label for="nombre">Nombre:</label>
-        <input type="text" id="nombre" name="nombre" required placeholder="Ingresa tu nombre" />
+          <form id="registro-form">
+            <div class="form-group">
+              <label for="nombre">Nombre:</label>
+              <input
+                type="text"
+                id="nombre"
+                class="form-control"
+                placeholder="Ingresa tu nombre"
+                required
+              />
+            </div>
+            <div class="form-group">
+              <label for="apellido_paterno">Apellido Paterno:</label>
+              <input
+                type="text"
+                id="apellido_paterno"
+                class="form-control"
+                placeholder="Ingresa tu apellido paterno"
+                required
+              />
+            </div>
+            <div class="form-group">
+              <label for="apellido_materno">Apellido Materno:</label>
+              <input
+                type="text"
+                id="apellido_materno"
+                class="form-control"
+                placeholder="Ingresa tu apellido materno"
+              />
+            </div>
+            <div class="form-group">
+              <label for="email">Correo Electrónico:</label>
+              <input
+                type="email"
+                id="email"
+                class="form-control"
+                placeholder="Ingresa tu correo"
+                required
+              />
+            </div>
+            <div class="form-group">
+              <label for="password">Contraseña:</label>
+              <input
+                type="password"
+                id="password"
+                class="form-control"
+                placeholder="Ingresa tu contraseña"
+                required
+              />
+            </div>
+            <button type="submit" class="btn btn-primary btn-block">
+              Registrarse
+            </button>
+          </form>
 
-        <label for="apellido1">Apellido Paterno:</label>
-        <input type="text" id="apellido1" name="apellido1" required placeholder="Ingresa tu apellido paterno" />
-
-        <label for="apellido2">Apellido Materno (Opcional):</label>
-        <input type="text" id="apellido2" name="apellido2" placeholder="Ingresa tu apellido materno" />
-
-        <label for="email">Correo Electrónico:</label>
-        <input type="email" id="email" name="email" required placeholder="Ingresa tu correo electrónico" />
-
-        <label for="password">Contraseña:</label>
-        <input type="password" id="password" name="password" required placeholder="Crea una contraseña" />
-
-        <label for="confirm-password">Confirmar Contraseña:</label>
-        <input type="password" id="confirm-password" name="confirm-password" required placeholder="Confirma tu contraseña" />
-
-        <button type="submit">Registrarse</button>
-      </form>
-
-      <!-- Contenedor de mensajes de error o éxito -->
-      <div id="register-error"></div>
-    </section>
-
-    <!-- Pie de página -->
-    <footer>
-      <div class="container">
-        <p>&copy; 2024 Taller de Puertas. Todos los derechos reservados.</p>
+          <div class="mt-3 text-center">
+            <small
+              >¿Ya tienes una cuenta?
+              <a href="login.html">Inicia sesión aquí</a></small
+            >
+          </div>
+        </div>
       </div>
+    </div>
+    <footer class="bg-primary text-white text-center py-3">
+      <p class="mb-0">
+        &copy; 2024 Taller de Puertas. Todos los derechos reservados.
+      </p>
     </footer>
+
+    <script src="js/register.js"></script>
   </body>
 </html>
-
