--- a/Taller_de_puertas-Main/Taller_de_puertas-/Taller_de_puertas-main/index.html
+++ b/Taller_de_puertas-Main/Taller_de_puertas-/Taller_de_puertas-main/index.html
@@ -25,7 +25,13 @@
               <a class="nav-link text-white" href="catalogo.html">Catálogo</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link text-white" href="inventario.html">Inventario</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link text-white" href="carrito.html">Carrito</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="facturacion.html">Facturacion</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-white" href="backend/logout.php"
