commit final taller de puertas
ultimos cambios finales

--- a/Taller_de_puertas-main/Taller_de_puertas-main/carrito.html
+++ b/Taller_de_puertas-main/Taller_de_puertas-main/carrito.html
@@ -47,8 +47,7 @@
       <h2 class="text-center mb-4">Carrito de Compras</h2>
       <div id="carrito-container"></div>
       <div class="text-center mt-4">
-        <button id="realizar-compra" class="btn btn-success btn-lg">
-          Realizar Compra
+        <button id="realizar-compra">
         </button>
       </div>
     </div>
