--- a/Taller_de_puertas-main/Taller_de_puertas-main/index.html
+++ b/Taller_de_puertas-main/Taller_de_puertas-main/index.html
@@ -31,7 +31,7 @@
               <a class="nav-link text-white" href="carrito.html">Carrito</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="facturacion.html">Facturacion</a>
+              <a class="nav-link text-white" href="facturacion.html">Facturación</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-white" href="backend/logout.php"
@@ -42,12 +42,50 @@
         </nav>
       </div>
     </header>
-    <!-- Lista de Productos -->
+
+    <!-- Sección principal -->
     <div class="container my-5">
-      <h2 class="text-center mb-4">Nuestros Productos</h2>
-      <div id="product-list" class="row"></div>
+      <h2 class="text-center mb-4">Bienvenidos a Taller de Puertas</h2>
+      <p class="text-center">
+        En <strong>Taller de Puertas</strong>, nos especializamos en ofrecer soluciones
+        personalizadas para puertas de madera, metal y portones automáticos.
+        Nuestro objetivo es optimizar tus procesos de compra y brindar productos
+        de alta calidad a través de una experiencia digital moderna.
+      </p>
+      <div class="text-center mt-4">
+        <a href="catalogo.html" class="btn btn-primary btn-lg">Ver Catálogo</a>
+      </div>
     </div>
 
+    <!-- Características del sistema -->
+    <div class="container my-5">
+      <h3 class="text-center mb-4">¿Qué ofrecemos?</h3>
+      <div class="row text-center">
+        <div class="col-md-4">
+          <h4>Gestión Integral</h4>
+          <p>
+            Control total de inventarios, pedidos y usuarios desde una plataforma
+            centralizada.
+          </p>
+        </div>
+        <div class="col-md-4">
+          <h4>Catálogo Interactivo</h4>
+          <p>
+            Navega por nuestra variedad de productos con descripciones detalladas
+            y precios claros.
+          </p>
+        </div>
+        <div class="col-md-4">
+          <h4>Carrito Dinámico</h4>
+          <p>
+            Agrega, modifica y elimina productos fácilmente para completar tu
+            compra.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Pie de página -->
     <footer class="bg-primary text-white text-center py-3">
       <p class="mb-0">
         &copy; 2024 Taller de Puertas. Todos los derechos reservados.
@@ -56,4 +94,4 @@
 
     <script src="js/index.js"></script>
   </body>
-</html>
+</html
