--- a/Taller_de_puertas-main/Taller_de_puertas-main/inventario.html
+++ b/Taller_de_puertas-main/Taller_de_puertas-main/inventario.html
@@ -1,41 +1,48 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Inventario - Taller de Puertas</title>
-  <link rel="stylesheet" href="styles.css" />
-</head>
-<body>
-  <header class="bg-primary text-white">
-    <div class="container d-flex justify-content-between align-items-center py-3">
-      <h1 class="mb-0">Taller de Puertas</h1>
-      <nav>
-        <ul class="nav">
-          <li class="nav-item">
-            <a class="nav-link text-white" href="index.html">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-white" href="catalogo.html">Catálogo</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-white" href="inventario.html">Inventario</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-white" href="carrito.html">Carrito</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-white" href="facturacion.html">Facturacion</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-white" href="backend/logout.php"
-              >Cerrar Sesión</a
-            >
-          </li>
-        </ul>
-      </nav>
-    </div>
-  </header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Catálogo</title>
+    <link
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body class="bg-light">
+    <!-- Header -->
+    <header class="bg-primary text-white">
+      <div
+        class="container d-flex justify-content-between align-items-center py-3"
+      >
+        <h1 class="mb-0">Taller de Puertas</h1>
+        <nav>
+          <ul class="nav">
+            <li class="nav-item">
+              <a class="nav-link text-white" href="index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="catalogo.html">Catálogo</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="inventario.html">Inventario</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="carrito.html">Carrito</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="facturacion.html">Facturación</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="backend/logout.php"
+                >Cerrar Sesión</a
+              >
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
   
   
 
